# patron-rs

./: Cargo.toml  README
.cargo/: config.toml
misc/: cargo_build.sh
src/: align.rs  build_index.rs  kmer.rs  kseq.rs  lib.rs  utils.rs
