[package]
name = "patron"
version = "0.1.0"
authors = ["Kevinzjy <kevinzjy1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
failure = "0.1"
docopt = "1.1.0"
log = "0.4"
serde = "1.0"
pretty_env_logger = "0.4.0"
bio = "0.32"
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn" }
